# ebook_maker

./: README.md  pyproject.toml
src/ebook_maker/: crew.py  main.py
src/ebook_maker/config/: agents-ebook-maker.yaml  tasks-ebook-maker.yaml
